// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl - Vanilla Baked I18n SPAs</title>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/src/counter.ts 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_main from "virtual:zintl/manager/none/entry:b_src_main";
export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    element.innerHTML = _t("Count is {counter}", { counter: counter }, { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_counter_setupCounter" });
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/src/main.ts 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_main from "virtual:zintl/manager/none/entry:b_src_main";
import "./style.css";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";


import { setupCounter } from "./counter.ts";
import { setupSwitcher } from "./switcher.ts";

await (globalThis.__zintl_inst = loadI18nInstance({ loaders: { ["b_src_main"]: _zintl_mgr_b_src_main.loader } }));
document.querySelector<HTMLDivElement>("#app")!.innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${heroImg}" class="base" width="170" height="179">
    <img src="\${typescriptLogo}" class="framework" alt="TypeScript logo"/>
    <img src="\${viteLogo}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>\${_t("Get started", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</h1>
    <p>\${_t("Edit <code>src/main.ts</code> and save to test <code>HMR</code>", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main", _tags: [{"alias":"code","originalOpen":"<code>","tagName":"code"}] })}</p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>\${_t("Documentation", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</h2>
    <p>\${_t("Your questions, answered", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${viteLogo}" alt="" />
          \${_t("Explore Vite", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescriptLogo}" alt="">
          \${_t("Learn more", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>\${_t("Connect with us", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</h2>
    <p>\${_t("Join the Vite community", { _mgr: _zintl_mgr_b_src_main, _bId: "b_src_main" })}</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;

setupCounter(document.querySelector<HTMLButtonElement>("#counter")!);
setupSwitcher(document.querySelector<HTMLDivElement>("#switcher")!);


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/main");
  });
}"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/src/switcher.ts 1`] = `
"export function setupSwitcher(element: HTMLElement) {
  const lang = (window.location.pathname.split("/")[1] as any) || "en";

  const locales = [
    { id: "en", name: "English" },
    { id: "ar", name: "العربية" },
    { id: "es", name: "Español" },
    { id: "zh", name: "中文" },
  ];

  element.innerHTML = locales
    .map(
      (l) => \`
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      <a href="/\${l.id}/">\${l.name}</a>
    </button>
  \`,
    )
    .join("");

  // element.querySelectorAll("button").forEach((btn) => {
  //   btn.addEventListener("click", () => {
  //     const newLang = (btn as HTMLElement).dataset.lang!;
  //     window.history.pushState({}, "", \`/\${newLang}\`);
  //   });
  // });
}"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/virtual:zintl/content/ar/entry:b_src_main 1`] = `
"const catalog = {
    "b_src_main": {
      "Get started": "ابدأ الآن",
      "Edit <code>src/main.ts</code> and save to test <code>HMR</code>": "عدّل <code>src/main.ts</code> واحفظ لاختبار <code>HMR</code>",
      "Documentation": "وثائق",
      "Your questions, answered": "إجابات لأسئلتك",
      "Explore Vite": "استكشف Vite",
      "Learn more": "تعرف على المزيد",
      "Connect with us": "تواصل معنا",
      "Join the Vite community": "انضم إلى مجتمع Vite",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`العدد هو \${params['counter']}\`;
  },
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/virtual:zintl/content/es/entry:b_src_main 1`] = `
"const catalog = {
    "b_src_main": {
      "Get started": "Empezar",
      "Edit <code>src/main.ts</code> and save to test <code>HMR</code>": "Editar <code>src/main.ts</code> y guardar para probar <code>HMR</code>",
      "Documentation": "Documentación",
      "Your questions, answered": "Tus preguntas, respondidas",
      "Explore Vite": "Explorar Vite",
      "Learn more": "Leer más",
      "Connect with us": "Conéctate con nosotros",
      "Join the Vite community": "Únete a la comunidad de Vite",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`La cuenta es \${params['counter']}\`;
  },
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/virtual:zintl/content/zh/entry:b_src_main 1`] = `
"const catalog = {
    "b_src_main": {
      "Get started": "开始使用",
      "Edit <code>src/main.ts</code> and save to test <code>HMR</code>": "编辑 <code>src/main.ts</code> 并保存以测试 <code>HMR</code>",
      "Documentation": "文档",
      "Your questions, answered": "你的问题，已有答案",
      "Explore Vite": "探索 Vite",
      "Learn more": "了解更多",
      "Connect with us": "联系我们",
      "Join the Vite community": "加入 Vite 社区",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`计数为 \${params['counter']}\`;
  },
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/virtual:zintl/manager/none/entry:b_src_main 1`] = `
"export default (() => {
  const manager = { id: "b_src_main", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_main": {
      "Get started": "Get started",
      "Edit <code>src/main.ts</code> and save to test <code>HMR</code>": "Edit <code>src/main.ts</code> and save to test <code>HMR</code>",
      "Documentation": "Documentation",
      "Your questions, answered": "Your questions, answered",
      "Explore Vite": "Explore Vite",
      "Learn more": "Learn more",
      "Connect with us": "Connect with us",
      "Join the Vite community": "Join the Vite community",
    },
    "b_src_counter_setupCounter": {
      "Count is {counter}": (params) => {
    const { counter } = params;
    return \`Count is \${params['counter']}\`;
  },
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_main").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_main").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_main").then(m => m.default);
        default: return {};
      }
    }, manifest: [] };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Development snapshots (Identity keys) > vanilla-spa-i18n-baked/dev-transforms/virtual:zintl/runtime/internal 1`] = `
"import { I18nStore, addCatalogs, getActiveInstance, getLocale, getStoreVersion, registerLoader, runInRequestScope, setActiveInstance, setLocale, subscribe, unregisterLoader } from "./store.js";
import { _t } from "./resolver.js";
import { registerZintlLoader } from "./registry.js";
//#region src/runtime/internal.ts
async function zintl(locale) {
	const activeLocale = locale || (typeof document !== "undefined" ? document.documentElement.lang : "");
	if (activeLocale) await setLocale(activeLocale);
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) {
			store.addCatalogs(config.catalogs);
			const active = getActiveInstance();
			if (active && active !== store) active.addCatalogs(config.catalogs);
		}
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
export { _t, _t as t, addCatalogs, getLocale, getStoreVersion, loadI18nInstance, registerLoader, registerZintlLoader, runInRequestScope, setLocale, subscribe, unregisterLoader as unregisterZintlLoader, zintl };"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/ar/index.html 1`] = `
"<!doctype html>
<html lang="ar" dir="rtl">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>زينتل | مثال تطبيق الصفحة الواحدة مخبوز متعدد اللغات</title>
    <script type="module" crossorigin src="/assets/ar/index.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/switcher.js">
    <link rel="stylesheet" crossorigin href="/assets/switcher-CUFt-qr9.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/ar/index.js 1`] = `
"import { i as typescript_default, n as hero_default, r as vite_default, t as setupSwitcher } from "../switcher.js";
//#region examples/vanilla-spa-i18n-baked/src/counter.ts?zintl-multiplex=ar
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = \`العدد هو \${counter}\`;
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/vanilla-spa-i18n-baked/src/main.ts?zintl-multiplex=ar
document.querySelector("#app").innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${hero_default}" class="base" width="170" height="179">
    <img src="\${typescript_default}" class="framework" alt="TypeScript logo"/>
    <img src="\${vite_default}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>ابدأ الآن</h1>
    <p>عدّل <code>src/main.ts</code> واحفظ لاختبار <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>وثائق</h2>
    <p>إجابات لأسئلتك</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${vite_default}" alt="" />
          استكشف Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescript_default}" alt="">
          تعرف على المزيد
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>تواصل معنا</h2>
    <p>انضم إلى مجتمع Vite</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;
setupCounter(document.querySelector("#counter"));
setupSwitcher(document.querySelector("#switcher"));
//#endregion
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/en/index.js 1`] = `
"import { i as typescript_default, n as hero_default, r as vite_default, t as setupSwitcher } from "../switcher.js";
//#region examples/vanilla-spa-i18n-baked/src/counter.ts?zintl-multiplex=en
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = \`Count is \${counter}\`;
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/vanilla-spa-i18n-baked/src/main.ts?zintl-multiplex=en
document.querySelector("#app").innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${hero_default}" class="base" width="170" height="179">
    <img src="\${typescript_default}" class="framework" alt="TypeScript logo"/>
    <img src="\${vite_default}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>Get started</h1>
    <p>Edit <code>src/main.ts</code> and save to test <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>Documentation</h2>
    <p>Your questions, answered</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${vite_default}" alt="" />
          Explore Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescript_default}" alt="">
          Learn more
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>Connect with us</h2>
    <p>Join the Vite community</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;
setupCounter(document.querySelector("#counter"));
setupSwitcher(document.querySelector("#switcher"));
//#endregion
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/es/index.js 1`] = `
"import { i as typescript_default, n as hero_default, r as vite_default, t as setupSwitcher } from "../switcher.js";
//#region examples/vanilla-spa-i18n-baked/src/counter.ts?zintl-multiplex=es
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = \`La cuenta es \${counter}\`;
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/vanilla-spa-i18n-baked/src/main.ts?zintl-multiplex=es
document.querySelector("#app").innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${hero_default}" class="base" width="170" height="179">
    <img src="\${typescript_default}" class="framework" alt="TypeScript logo"/>
    <img src="\${vite_default}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>Empezar</h1>
    <p>Editar <code>src/main.ts</code> y guardar para probar <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>Documentación</h2>
    <p>Tus preguntas, respondidas</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${vite_default}" alt="" />
          Explorar Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescript_default}" alt="">
          Leer más
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>Conéctate con nosotros</h2>
    <p>Únete a la comunidad de Vite</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;
setupCounter(document.querySelector("#counter"));
setupSwitcher(document.querySelector("#switcher"));
//#endregion
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/switcher.js 1`] = `
"//#region \\0vite/modulepreload-polyfill.js
(function polyfill() {
	const relList = document.createElement("link").relList;
	if (relList && relList.supports && relList.supports("modulepreload")) return;
	for (const link of document.querySelectorAll("link[rel=\\"modulepreload\\"]")) processPreload(link);
	new MutationObserver((mutations) => {
		for (const mutation of mutations) {
			if (mutation.type !== "childList") continue;
			for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
		}
	}).observe(document, {
		childList: true,
		subtree: true
	});
	function getFetchOpts(link) {
		const fetchOpts = {};
		if (link.integrity) fetchOpts.integrity = link.integrity;
		if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
		if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
		else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
		else fetchOpts.credentials = "same-origin";
		return fetchOpts;
	}
	function processPreload(link) {
		if (link.ep) return;
		link.ep = true;
		const fetchOpts = getFetchOpts(link);
		fetch(link.href, fetchOpts);
	}
})();
//#endregion
//#region examples/vanilla-spa-i18n-baked/src/assets/typescript.svg
var typescript_default = "data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20aria-hidden='true'%20width='32'%20height='32'%20viewBox='0%200%20256%20256'%3e%3cpath%20fill='%23007ACC'%20d='M0%20128v128h256V0H0z'/%3e%3cpath%20fill='%23FFF'%20d='m56.612%20128.85l-.081%2010.483h33.32v94.68h23.568v-94.68h33.321v-10.28c0-5.69-.122-10.444-.284-10.566c-.122-.162-20.4-.244-44.983-.203l-44.74.122l-.121%2010.443Zm149.955-10.742c6.501%201.625%2011.459%204.51%2016.01%209.224c2.357%202.52%205.851%207.111%206.136%208.208c.08.325-11.053%207.802-17.798%2011.988c-.244.162-1.22-.894-2.317-2.52c-3.291-4.795-6.745-6.867-12.028-7.233c-7.76-.528-12.759%203.535-12.718%2010.321c0%201.992.284%203.17%201.097%204.795c1.707%203.536%204.876%205.649%2014.832%209.956c18.326%207.883%2026.168%2013.084%2031.045%2020.48c5.445%208.249%206.664%2021.415%202.966%2031.208c-4.063%2010.646-14.14%2017.879-28.323%2020.276c-4.388.772-14.79.65-19.504-.203c-10.28-1.828-20.033-6.908-26.047-13.572c-2.357-2.6-6.949-9.387-6.664-9.874c.122-.163%201.178-.813%202.356-1.504c1.138-.65%205.446-3.129%209.509-5.485l7.355-4.267l1.544%202.276c2.154%203.29%206.867%207.801%209.712%209.305c8.167%204.307%2019.383%203.698%2024.909-1.26c2.357-2.153%203.332-4.388%203.332-7.68c0-2.966-.366-4.266-1.91-6.501c-1.99-2.845-6.054-5.242-17.595-10.24c-13.206-5.69-18.895-9.224-24.096-14.832c-3.007-3.25-5.852-8.452-7.03-12.8c-.975-3.617-1.22-12.678-.447-16.335c2.723-12.76%2012.353-21.659%2026.25-24.3c4.51-.853%2014.994-.528%2019.424.569Z'/%3e%3c/svg%3e";
//#endregion
//#region examples/vanilla-spa-i18n-baked/src/assets/vite.svg
var vite_default = "/assets/vite-BF8QNONU.svg";
//#endregion
//#region examples/vanilla-spa-i18n-baked/src/assets/hero.png
var hero_default = "/assets/hero-CLDdwZDr.png";
//#endregion
//#region examples/vanilla-spa-i18n-baked/src/switcher.ts
function setupSwitcher(element) {
	const lang = window.location.pathname.split("/")[1] || "en";
	element.innerHTML = [
		{
			id: "en",
			name: "English"
		},
		{
			id: "ar",
			name: "العربية"
		},
		{
			id: "es",
			name: "Español"
		},
		{
			id: "zh",
			name: "中文"
		}
	].map((l) => \`
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      <a href="/\${l.id}/">\${l.name}</a>
    </button>
  \`).join("");
}
//#endregion
export { typescript_default as i, hero_default as n, vite_default as r, setupSwitcher as t };
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/assets/zh/index.js 1`] = `
"import { i as typescript_default, n as hero_default, r as vite_default, t as setupSwitcher } from "../switcher.js";
//#region examples/vanilla-spa-i18n-baked/src/counter.ts?zintl-multiplex=zh
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = \`计数为 \${counter}\`;
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/vanilla-spa-i18n-baked/src/main.ts?zintl-multiplex=zh
document.querySelector("#app").innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${hero_default}" class="base" width="170" height="179">
    <img src="\${typescript_default}" class="framework" alt="TypeScript logo"/>
    <img src="\${vite_default}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>开始使用</h1>
    <p>编辑 <code>src/main.ts</code> 并保存以测试 <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>文档</h2>
    <p>你的问题，已有答案</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${vite_default}" alt="" />
          探索 Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescript_default}" alt="">
          了解更多
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>联系我们</h2>
    <p>加入 Vite 社区</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;
setupCounter(document.querySelector("#counter"));
setupSwitcher(document.querySelector("#switcher"));
//#endregion
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/en/index.html 1`] = `
"<!doctype html>
<html lang="en" dir="ltr">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl - Vanilla Baked I18n SPAs</title>
    <script type="module" crossorigin src="/assets/en/index.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/switcher.js">
    <link rel="stylesheet" crossorigin href="/assets/switcher-CUFt-qr9.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/es/index.html 1`] = `
"<!doctype html>
<html lang="es">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl | ejemplo básico de aplicación de página única</title>
    <script type="module" crossorigin src="/assets/es/index.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/switcher.js">
    <link rel="stylesheet" crossorigin href="/assets/switcher-CUFt-qr9.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Redirecting...</title>
    <script id="zintl-multiplex-redirect">
      (function() {
        try {
          const lang = (navigator.language || 'en').split('-')[0];
          const supported = ["en","ar","es","zh"];
          const parts = window.location.pathname.split('/').filter(Boolean);
          if (parts.length > 0 && supported.includes(parts[0])) return;
          const target = supported.includes(lang) ? lang : 'en';
          const path = window.location.pathname.replace(/^/+/, '');
          window.location.replace('/' + target + '/' + path + window.location.search + window.location.hash);
        } catch (e) {
          const supported = ["en","ar","es","zh"];
          const parts = window.location.pathname.split('/').filter(Boolean);
          if (parts.length > 0 && supported.includes(parts[0])) return;
          const path = window.location.pathname.replace(/^/+/, '');
          window.location.replace('/en/' + path);
        }
      })();
    </script>
  </head>
  <body>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Final Production Build (dist) snapshots > vanilla-spa-i18n-baked/dist/zh/index.html 1`] = `
"<!doctype html>
<html lang="zh" dir="ltr">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl | 基础单页应用多语言示例</title>
    <script type="module" crossorigin src="/assets/zh/index.js"></script>
    <link rel="modulepreload" crossorigin href="/assets/switcher.js">
    <link rel="stylesheet" crossorigin href="/assets/switcher-CUFt-qr9.css">
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Zintl - Vanilla Baked I18n SPAs</title>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/src/counter.ts 1`] = `
"export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    element.innerHTML = \`Count is \${counter}\`;
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/src/main.ts 1`] = `
"import "./style.css";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";


import { setupCounter } from "./counter.ts";
import { setupSwitcher } from "./switcher.ts";


document.querySelector<HTMLDivElement>("#app")!.innerHTML = \`
<section id="header">
  <div id="switcher" class="switcher"></div>
  <div class="vertical-ticks"></div>
  <div class="icon-border"><svg class="icon" role="img" aria-hidden="true"><use href="/icons.svg#translate-icon"></use></svg></div>
</section>

<div class="ticks"></div>

<section id="center">
  <div class="hero">
    <img src="\${heroImg}" class="base" width="170" height="179">
    <img src="\${typescriptLogo}" class="framework" alt="TypeScript logo"/>
    <img src="\${viteLogo}" class="vite" alt="Vite logo" />
  </div>
  <div>
    <h1>Get started</h1>
    <p>Edit <code>src/main.ts</code> and save to test <code>HMR</code></p>
  </div>
  <button id="counter" type="button" class="counter"></button>
</section>

<div class="ticks"></div>

<section id="next-steps">
  <div id="docs">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#documentation-icon"></use></svg>
    <h2>Documentation</h2>
    <p>Your questions, answered</p>
    <ul>
      <li>
        <a href="https://vite.dev/" target="_blank">
          <img class="logo" src="\${viteLogo}" alt="" />
          Explore Vite
        </a>
      </li>
      <li>
        <a href="https://www.typescriptlang.org" target="_blank">
          <img class="button-icon" src="\${typescriptLogo}" alt="">
          Learn more
        </a>
      </li>
    </ul>
  </div>
  <div id="social">
    <svg class="icon" role="presentation" aria-hidden="true"><use href="/icons.svg#social-icon"></use></svg>
    <h2>Connect with us</h2>
    <p>Join the Vite community</p>
    <!-- @zintl-ignore -->
    <ul>
      <li><a href="https://github.com/vitejs/vite" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#github-icon"></use></svg>GitHub</a></li>
      <li><a href="https://chat.vite.dev/" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#discord-icon"></use></svg>Discord</a></li>
      <li><a href="https://x.com/vite_js" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#x-icon"></use></svg>X.com</a></li>
      <li><a href="https://bsky.app/profile/vite.dev" target="_blank"><svg class="button-icon" role="presentation" aria-hidden="true"><use href="/icons.svg#bluesky-icon"></use></svg>Bluesky</a></li>
    </ul>
  </div>
</section>

<div class="ticks"></div>
<section id="spacer"></section>
\`;

setupCounter(document.querySelector<HTMLButtonElement>("#counter")!);
setupSwitcher(document.querySelector<HTMLDivElement>("#switcher")!);"
`;

exports[`Example Proof: vanilla-spa-i18n-baked > should match Production snapshots (Baking) > vanilla-spa-i18n-baked/prod-transforms/src/switcher.ts 1`] = `
"export function setupSwitcher(element: HTMLElement) {
  const lang = (window.location.pathname.split("/")[1] as any) || "en";

  const locales = [
    { id: "en", name: "English" },
    { id: "ar", name: "العربية" },
    { id: "es", name: "Español" },
    { id: "zh", name: "中文" },
  ];

  element.innerHTML = locales
    .map(
      (l) => \`
    <button data-lang="\${l.id}" class="\${lang === l.id ? "active" : ""}">
      <a href="/\${l.id}/">\${l.name}</a>
    </button>
  \`,
    )
    .join("");

  // element.querySelectorAll("button").forEach((btn) => {
  //   btn.addEventListener("click", () => {
  //     const newLang = (btn as HTMLElement).dataset.lang!;
  //     window.history.pushState({}, "", \`/\${newLang}\`);
  //   });
  // });
}"
`;
